Enhanced thumbnail generation, fixed infinite scrolling
